--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <h3 class="qoute">"QUOTES HERE"</h3>
       <p class="author">-AUTHOR</p>
-      <button class="get-quote">GET QUOTE</button>
+      <button class="get-quote">GET<br>QUOTE</button>
     </main>
 
     <script src="script.js"></script>
